2005-11-02  Andy Wingo  <wingo@pobox.com>

	* flumotion/common/Makefile.am (flumotion_PYTHON): 
	* flumotion/common/debug.py: New module, exports trace_start() and
	trace_stop() procedures.

	* flumotion/common/log.py (ERROR, WARN, INFO, DEBUG, LOG): New
	integer values exported by the module.
	(_levels, getLevel): Removed; levels are ints and not strings.
	(getLevelName): New proc. Does type-checking on its input. Should
	really have some nice decorators to check types.
	(registerCategory): Adapted for the change to levels.
	(_canShortcutLogging): New proc, returns True if no logging will
	be performed for this category at this level.
	(_handle): Make scrubFileName and getFileLine internal. Adapt to
	level changes. Don't call getFileLine if not necessary.
	(Loggable.error, Loggable.warning, Loggable.info, Loggable.debug) 
	(Loggable.log): if _canShortcutLogging(), avoid doing expensive
	calculations.
	(FluLogObserver.emit): Adapt to level changes.
	(stderrHandler): Same.

2005-10-31  Andy Wingo  <wingo@pobox.com>

	* flumotion/component/feedcomponent.py
	(FeedComponentMedium.__init__.on_feed_ready): The remote method is
	feedReady, not notifyFeedPorts.

	* flumotion/component/feedcomponent09.py
	(FeedComponent.bus_watch_func): Set to happy only from the global
	pipeline state change message. Log a little less.

	* flumotion/worker/job.py (run): Profile the job if profiling is
	available. Don't start another reactor; rely on worker.py
	unwinding cleanly.
	(JobMedium.shutdown): Don't os._exit(0), allow twisted to clean
	itself properly.

	* flumotion/worker/worker.py (WorkerMedium.remote_start): Rework
	to receive return values both from the parent and child process.
	Now uses defer generators.
	(Kindergarten.play): Return the pid or None like os.fork().

	* flumotion/twisted/compat.py (install_reactor): Don't spawn
	threads to resolve names with twisted 2.0.

2005-10-27  Thomas Vander Stichele  <thomas (at) apestaart (dot) org>

	* flumotion/twisted/gtk2reactor.py: